fixed the h1 letter spacing for mobile users

--- a/src/styling.css
+++ b/src/styling.css
@@ -53,6 +53,7 @@ h2 {
 @media (max-width: 500px) {
   h1 {
     font-size: 37px;
+    letter-spacing: 0.3em;
   }
 
   h2 {
